# stylotool

./: .gitmodules  README.md  example_chiasmus.sh  example_config.json  paper.bib  paper.md  pyproject.toml  requirements.txt
.github/: workflow.yml
.github/workflows/: package-and-publish.yml  python-publish.yml
code/: ChiasmusAnnotation.py  MGHPreprocessor.py  TextObject.py  TextPreprocessor.py  check_configs.py  stylotool.py  test_chiasmus_annotation.py  train_chiasmus_model.py
code.bk/: chiasmus.py  clean_configs.sh  helpers.py  test.json
datasets/tests/: chiasmustest.txt  metaphortest.txt  test_chiasmus_annotation.json
models/: chiasmus_de.pkl  metaphor_de.pkl  metaphor_de.torch
src/: AlliterationAnnotation.py  ChiasmusAnnotation.py  EpiphoraAnnotation.py  MetaphorAnnotation.py  PolysyndetonAnnotation.py  SimilarityNN.py  TextObject.py  stylotool.py  test_alliteration_annotation.py  test_metaphor_annotations.py  test_polysyndeton_annotation.py  test_text_object.py  test_tree.py
src/freestylo/: AlliterationAnnotation.py  ChiasmusAnnotation.py  Configs.py  EpiphoraAnnotation.py  MetaphorAnnotation.py  PolysyndetonAnnotation.py  TextPreprocessor.py  __main__.py  freestylo_main.py
src/stylotool/: AlliterationAnnotation.py  ChiasmusAnnotation.py  Configs.py  EpiphoraAnnotation.py  MGHPreprocessor.py  MetaphorAnnotation.py  PolysyndetonAnnotation.py  TextObject.py  (+2 more)
test/: test_alliteration_annotation.py  test_chiasmus_annotation.py  test_epiphora_annotation.py  test_metaphor_annotations.py  test_polysyndeton_annotation.py  test_text.json  test_text_object.py
(+6 files in other folders)
